# spotify-tags-etl

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  poetry.toml  pyproject.toml
app/: PostgresMedia.py  SpotifyClient.py  dev_tools_lib.py  etl_pipeline.py  etl_queries.py
app/config/: pg_admin_servers.json  spotify_cfg_example.toml
config/: pg_admin_servers.json  settings_example.toml
data/: local_media_extract.json  local_media_metadata.json
docker/: docker-compose-dev.yaml  rebuild_container.sh
docker/config/: pg_admin_server_example.json  postgres_example_dev.env
src/: etl_pipeline.py  postgres_media.py  spotify_client.py
src/media_etl/: postgres_media.py  run_pipeline.py  run_playlist_etl.py  spotify_client.py
src/media_etl/database/: __init__.py
src/media_etl/sql/: create_tables.sql  models.py  offline_ids.py  params_queries.py
src/media_etl/util/: __init__.py  data_models.py  logger.py  settings.py
src/spotify_tags_etl/: __init__.py  postgres_media.py  run_pipeline.py  run_playlist_etl.py  spotify_client.py
src/spotify_tags_etl/sql/: __init__.py  models.py  offline_ids.py
src/spotify_tags_etl/util/: logger.py  settings.py
src/sql/: offline_ids.py  params_queries.py
src/util/: logger.py  settings.py
tests/: test_credentials_postgres.py  test_credentials_spotify.py  test_pyproject_settings.py
