[tool.poetry]
authors = ["Emile Averill <cloud.apps@averille.dev>"]
description = "DEMO: load music tags to relational backend"
keywords = ["spotify", "tags"]
license = "MIT"
name = "spotify-tags-etl"
packages = [
    {from = "src", include = "spotify_tags_etl"},
]
readme = "README.md"
version = "0.1.5"

[tool.poetry.dependencies]
pandas = "*"
pathvalidate = "*"
pendulum = "*"
psycopg2-binary = "*"
pyarrow = "*"
pydantic = "*"
pydantic-settings = "*"
python = "^3.12"
rapidfuzz = "*"
requests = "*"
spotipy = "*"
sqlmodel = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
sqlfluff = "*"
toml-sort = "*"

[tool.black]
line-length = 120
quiet = false
target-version = ["py312"]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
line_length = 120
profile = "black"
py_version = 312
skip = [".dockerignore", ".gitignore", ".venv"]
src_paths = ["src", "tests"]
use_parentheses = true

[tool.tomlsort]
all = true
in_place = true
no_sort_tables = true
sort_inline_arrays = true
sort_inline_tables = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.mypy]
check_untyped_defs = true
disable_error_code = [
    "import",
]
explicit_package_bases = false
files = "*.py"
ignore_missing_imports = false
mypy_path = "src"
namespace_packages = true
no_implicit_optional = true
pretty = true
python_version = "3.12"
show_error_codes = true

[tool.pydocstyle]
convention = "google"

[tool.pylint.messages_control]
disable = [
    "consider-using-dict-items",
    "invalid-name",
    "logging-fstring-interpolation",
]
extension-pkg-allow-list = ["pydantic"]
max-line-length = 120

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = [".", "tests"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
